--- a/cards/index.html
+++ b/cards/index.html
@@ -13,5 +13,19 @@
             <div class="card-side card-back">BACK</div>
         </div>
     </div>
+    <div class="section-1">
+        <div class="card">
+            <div class="card-side card-front">FRONT</div>
+            <div class="card-side card-back">BACK</div>
+        </div>
+    </div>
+    <div class="section-1">
+        <div class="card">
+            <div class="card-side card-front">FRONT</div>
+            <div class="card-side card-back">
+                <img src="./cat.png" alt="FY cat">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
